--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryDark">#0097A7</color>
+    <color name="colorPrimary">#99D5E2</color>
+    <color name="colorPrimaryDark">#69ABB2</color>
     <color name="colorPrimaryLight">#B2EBF2</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#69ABB2</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="icons">#FFFFFF</color>
