--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="#99D5E2"
+        android:angle="90"
         android:endColor="#69ABB2"
-        android:startColor="#B2EBF2"
+        android:startColor="#99D5E2"
         android:type="linear" />
 </shape>
