--- a/app/src/main/res/menu/activity_home_drawer_if_user_signed.xml
+++ b/app/src/main/res/menu/activity_home_drawer_if_user_signed.xml
@@ -3,7 +3,7 @@
 
     <group
         android:id="@+id/group1"
-        android:checkableBehavior="single">
+        android:checkableBehavior="none">
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
@@ -43,11 +43,11 @@
 
         <item
             android:id="@+id/settings"
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/settings" />
         <item
             android:id="@+id/helpAndFeedback"
-            android:icon="@drawable/ic_menu_send"
+            android:icon="@drawable/ic_help_black_24dp"
             android:title="@string/help_feedback" />
 
     </group>
