--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_email_24dp"
                 android:drawablePadding="8dp"
-                android:hint="Email" />
+                android:hint="@string/prompt_email" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -56,7 +56,7 @@
                 android:inputType="textPassword"
                 android:drawableLeft="@drawable/ic_password"
                 android:drawablePadding="8dp"
-                android:hint="Password" />
+                android:hint="@string/password" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
@@ -114,7 +114,7 @@
         android:clickable="true"
         android:gravity="center_horizontal"
         android:padding="10dp"
-        android:text="forgot your password?"
+        android:text="@string/forgot_your_password"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/darker_gray" />
 
