--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -18,106 +19,106 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:showIn="@layout/content_sign_in">
 
-    <LinearLayout
-        android:id="@+id/email_login_form"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_email"
+        <LinearLayout
+            android:id="@+id/email_login_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/edit_email"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:inputType="textEmailAddress"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_email_24dp"
-                android:drawablePadding="8dp"
-                android:hint="@string/prompt_email" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_password"
+                <EditText
+                    android:id="@+id/edit_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_email_24dp"
+                    android:drawablePadding="8dp"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/edit_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_password"
+                    android:drawablePadding="8dp"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/social_network"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/email_login_form"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:paddingBottom="40dp"
+            android:paddingTop="40dp">
 
-            <EditText
-                android:id="@+id/edit_password"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:drawableLeft="@drawable/ic_password"
-                android:drawablePadding="8dp"
-                android:hint="@string/password" />
-        </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
+                android:contentDescription="@null"
+                android:onClick="loginWithFacebook"
+                android:src="@drawable/facebook_logo" />
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:contentDescription="@null"
+                android:onClick="loginWithGoogle"
+                android:src="@drawable/google_logo" />
 
-    <LinearLayout
-        android:id="@+id/social_network"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/email_login_form"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:paddingBottom="40dp"
-        android:paddingTop="40dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@null"
+                android:onClick="loginWithTwitter"
+                android:src="@drawable/twitter_logo" />
 
-        <ImageView
-            android:onClick="loginWithFacebook"
-            android:layout_width="wrap_content"
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            android:src="@drawable/facebook_logo" />
+            android:layout_below="@+id/social_network"
+            android:background="@drawable/selectable_button"
+            android:onClick="loginWithEmail"
+            android:text="Sign In"
+            android:textColor="#ffffff" />
 
-        <ImageView
-            android:onClick="loginWithGoogle"
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:contentDescription="@null"
-            android:src="@drawable/google_logo" />
-
-        <ImageView
-            android:onClick="loginWithTwitter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            android:src="@drawable/twitter_logo" />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/login_button"
-        android:onClick="loginWithEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/social_network"
-        android:background="@drawable/selectable_button"
-        android:text="Sign In"
-        android:textColor="#ffffff" />
-
-    <TextView
-        android:onClick="retrievePassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_button"
-        android:clickable="true"
-        android:gravity="center_horizontal"
-        android:padding="10dp"
-        android:text="@string/forgot_your_password"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/darker_gray" />
+            android:layout_below="@+id/login_button"
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:onClick="retrievePassword"
+            android:padding="10dp"
+            android:text="@string/forgot_your_password"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/darker_gray" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
